--- a/src/components/Projects/Quotes/quotes.css
+++ b/src/components/Projects/Quotes/quotes.css
@@ -2,6 +2,7 @@
   box-shadow: inset 0 0 3px #457cb0;
   padding: 15px;
   margin-bottom: 15px;
+  max-width: 1080px;
 }
 
 .quotes-title {
@@ -160,15 +161,38 @@
   margin: 0;
 }
 
+@media only screen and (max-width: 1080px) {
+  .outer-div {
+    margin: 20px;
+  }
+
+  .buttons {
+    width: 92.5%;
+    display: flex;
+    justify-content: space-between;
+    align-self: center;
+    z-index: 2;
+    position: absolute;
+  }
+}
+
 @media screen and (max-width: 850px) {
   .quote-container {
     height: 450px;
+  }
+
+  .buttons {
+    max-width: 850px;
   }
 }
 
 @media screen and (max-width: 780px) {
   .wrapper {
     display: none;
+  }
+
+  .outer-div {
+    margin: 0 15px;
   }
 
   .quote-demo {
